# cellprofiler

./: .gitignore  README.md  btf_to_green.py  cellprofiler.txt  config_example.yaml  extract_channel.py  extract_green_only.py  hpc_btf_processor.py  hpc_btf_processor_2pass.py  logging_config.yaml  memory_comparison.py  monitor_memory.py  pipeline_manager.py  pyproject.toml  run_2pass_btf_processing.sbatch  run_btf_processing.sbatch  run_green_extraction.sbatch  setup_hpc_pipeline.sh  test.py  test_corrupted_btf.py  test_dask_small.py  test_small_tile.py  tile_basic.py  tile_btf.py  tile_dask.py  tile_memory_safe.py  tile_opencv.py  validate_output.py  verify_metadata.py  vsi_to_ometiff.py
docs/: CONVERSION_REPORT.md  PIPELINE_DOCUMENTATION.md
pipelines/: brightfield.cppipe  oil_immersion.cppipe
scripts/: mount_easystore.sh  process_all.sh  run_batch.sh
src/cellprofiler_tools/: __init__.py
src/cellprofiler_tools/analysis/: __init__.py  calculate_iod.py  verify_metadata.py
src/cellprofiler_tools/batch/: __init__.py  process.py  process_parallel.py
src/cellprofiler_tools/converters/: __init__.py  btf_to_green.py
