[project]
name = "btf-hpc-processor"
version = "1.0.0"
description = "HPC pipeline for processing large BTF files with green channel extraction and tiling for CellProfiler analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagecodecs>=2025.8.2",
    "numpy>=2.3.4",
    "tifffile>=2025.10.16",
    "tqdm>=4.66.0",
    "PyYAML>=6.0",
]
