[project]
name = "cellprofiler-tools"
version = "1.0.0"
description = "Image conversion and analysis utilities for CellProfiler workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imagecodecs>=2025.8.2",
    "numpy>=2.3.4",
    "tifffile>=2025.10.16",
    "tqdm>=4.66.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "zarr>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cellprofiler_tools"]
